objects/Generic_Case_KPI__c.object
<CustomObject>
    <fields>
        <fullName>ActualBooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualDateTimeValue__c</fullName>
        <label>Actual DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualDecimalValue__c</fullName>
        <label>Actual Decimal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualIntegerValue__c</fullName>
        <label>Actual Integer Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualStringValue__c</fullName>
        <label>Actual String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Indicator_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Indicator Definition</label>
        <referenceTo>AssessmentIndicatorDefinition</referenceTo>
        <relationshipLabel>Generic Case KPI</relationshipLabel>
        <relationshipName>Generic_Case_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Generic Case KPI</relationshipLabel>
        <relationshipName>Generic_Case_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpectedBooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expected Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedDateTimeValue__c</fullName>
        <label>Expected DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpectedDecimalValue__c</fullName>
        <label>Expected Decimal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedIntegerValue__c</fullName>
        <label>Expected Integer Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedStringValue__c</fullName>
        <label>Expected String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Generic Case KPI</relationshipLabel>
        <relationshipName>Generic_Case_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>SerialNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Device Handover</fullName>
                </value>
                <value>
                    <fullName>Loan Device Handover</fullName>
                </value>
                <value>
                    <fullName>Trial Device Handover</fullName>
                </value>
                <value>
                    <fullName>Trial Device Return</fullName>
                </value>
                <value>
                    <fullName>Loan Device Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Generic Case KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SerialNumber__c</columns>
        <columns>Case__c</columns>
        <columns>Product__c</columns>
        <columns>Assessment_Indicator_Definition__c</columns>
        <columns>Type__c</columns>
        <columns>ActualBooleanValue__c</columns>
        <columns>ActualIntegerValue__c</columns>
        <columns>ActualStringValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GKPI-{0000000000}</displayFormat>
        <label>Generic Case KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Case KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>